# sqlite-amalgamation

./: .gitignore  CMakeLists.txt  README.md  README.txt  premake5.lua  shell.c  sqlite3.h  sqlite3_config.h.in
